--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -11,10 +11,10 @@
     <input type="number" name="num1" required>
     <input type="number" name="num2" required><br><br>
 
-    <button type="submit" name="operacion" value="suma">Suma</button>
-    <button type="submit" name="operacion" value="resta">Resta</button>
-    <button type="submit" name="operacion" value="multiplicacion">Multiplicación</button>
-    <button type="submit" name="operacion" value="division">División</button>
+    <button type="submit" name="operacion" value="sumar">Sumar</button>
+    <button type="submit" name="operacion" value="restar">Restar</button>
+    <button type="submit" name="operacion" value="multiplicar">Multiplicar</button>
+    <button type="submit" name="operacion" value="dividir">Dividir</button>
 </form>
 
 <div th:if="${resultado != null}">
